--- a/comiteNueva.html
+++ b/comiteNueva.html
@@ -102,33 +102,81 @@
                                 <!-- CREANDO TITULOS DE TEMA Y TIPO DE PREGUNTA  -->
                                 <div class="row">
                                     <div class="col-md-6 px-5">
-                                       <h5 class="card-title mt-3 fw-bold" style="color:#1000c0">Tema:</h5>
+                                       <h5 class="card-title mt-3 fw-bold" style="color:#1000c0">Especialidad:</h5>
                                     </div>
                                     <div class="col-md-6 px-5">
-                                       <h5 class="card-title mt-3 fw-bold" style="color:#1000c0"> Tipo de Pregunta:</h5>
+                                       <h5 class="card-title mt-3 fw-bold" style="color:#1000c0">Ciclo:</h5>
                                     </div>
                                 </div>
-
                                 <div class="row">
                                     <!-- CREACION DE SELECT DE TEMAS DE PREGUNTAS -->
                                     <div class="col-md-6 px-5">
                                         <select class="form-select" aria-label="Default select example" style="background-color:rgb(219, 219, 219);">
-                                            <option selected>Temas</option>
-                                            <option value="1">Programación orientada a objetos</option>
-                                            <option value="2">Base de Datos</option>
-                                            <option value="3">Diseño de Interfaces</option>
+                                            <option selected>Especialidades</option>
+                                            <option value="1">Redes y comunicaciones</option>
+                                            <option value="2">Diseño y Desarrollo de Software</option>
+                                            <option value="3">Diseño y Desarrollo de Videojuegos</option>
+                                            <option value="4">Big Data</option>
                                         </select>
                                     </div>
                                     <!-- CREACION DE SELECT DE TIPOS DE PREGUNTAS -->
                                     <div class="col-md-6 px-5">
                                         <select class="form-select" aria-label="Default select example" style="background-color:rgb(219, 219, 219);">
-                                            <option selected>Tipos</option>
-                                            <option value="1">Opciones múltiples</option>
-                                            <option value="2">Abierta</option>
-                                            <option value="3">Relacionar</option>
+                                            <option selected>Ciclo</option>
+                                            <option value="1"> I </option>
+                                            <option value="2"> II</option>
+                                            <option value="3"> III </option>
+                                            <option value="4"> IV </option>
+                                            <option value="5"> V </option>
+                                            <option value="6"> VI </option>
                                           </select>
                                     </div>
                                 </div>
+                                     <!-- CREANDO TITULOS DE TEMA Y TIPO DE PREGUNTA  -->
+                                     <div class="row">
+                                        <div class="col-md-6 px-5">
+                                           <h5 class="card-title mt-3 fw-bold" style="color:#1000c0">Cursos:</h5>
+                                        </div>
+                                        <div class="col-md-6 px-5">
+                                           <h5 class="card-title mt-3 fw-bold" style="color:#1000c0"> Módulo:</h5>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <!-- CREACION DE SELECT DE TEMAS DE PREGUNTAS -->
+                                        <div class="col-md-6 px-5">
+                                            <select class="form-select" aria-label="Default select example" style="background-color:rgb(219, 219, 219);">
+                                                <option selected>Cursos</option>
+                                                <option value="1">Estructuras de Datos y Algoritmos</option>
+                                                <option value="2">Bases de Datos Avanzadas</option>
+                                                <option value="3">Sistemas Operativos</option>
+                                                <option value="4">Ingeniería de Requerimiento de Software</option>
+                                                <option value="5">Mejora y Calidad Continua</option>
+                                                <option value="6">Desarrollo de Aplicaciones en Internet</option>
+                                            </select>
+                                        </div>
+                                        <!-- CREACION DE SELECT DE TIPOS DE PREGUNTAS -->
+                                        <div class="col-md-6 px-5">
+                                            <select class="form-select" aria-label="Default select example" style="background-color:rgb(219, 219, 219);">
+                                                <option selected>Módulos</option>
+                                                <option selected>1</option>
+                                                <option selected>2</option>
+                                                <option selected>3</option>
+                                                <option selected>4</option>
+                                                <option selected>5</option>
+                                                <option selected>6</option>
+                                                <option selected>7</option>
+                                                <option selected>8</option>
+                                                <option selected>9</option>
+                                                <option selected>10</option>
+                                                <option selected>11</option>
+                                                <option selected>12</option>
+                                                <option selected>13</option>
+                                                <option selected>14</option>
+                                                <option selected>15</option>
+                                                <option selected>16</option>
+                                              </select>
+                                        </div>
+                                    </div>
                                 <!-- CREACION TITULO DE TEXTAREA PREGUNTA -->
                                 <div class="row">
                                     <div class="col-md-12 px-5">
